record-shop/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>Users&apos; subscriptions to web push notifications.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Subscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>