record-shop/main/default/objects/Subscription__c/fields/auth__c.field-meta.xml
<CustomField>
    <fullName>auth__c</fullName>
    <description>Authentication secret.</description>
    <label>auth</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>