record-shop/main/default/objects/Subscription__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Unique endpoint associated with the push subscription.</description>
    <externalId>true</externalId>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>