record-shop/main/default/objects/Subscription__c/fields/p256dh__c.field-meta.xml
<CustomField>
    <fullName>p256dh__c</fullName>
    <label>p256dh</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>